<resources>
    <string name="app_name">HornPub-Travel</string>
    <string name="appName">Travel Assistant</string>
    <string name="emailPhone">Email/Phone</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="signUp">Sign Up</string>
    <string name="or">OR</string>
    <string name="pass">Password</string>
    <string name="confirmPass">Confirm password</string>
    <string name="fullName">Full name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="viaSms">Via sms</string>
    <string name="viaEmail">Via email</string>
    <string name="submit">Submit</string>
    <string name="enterPhone">Enter your phone number</string>
    <string name="enterEmail">Enter your email</string>
    <string name="selectVia">Select which contact details should we use to reset your password:</string>
    <string name="facebook_app_id">473939903223861</string>
    <string name="fb_login_protocol_scheme">fb473939903223861</string>
    <string name="title_my_tour">Chuyến đi gợi ý</string>
    <string name="title_list">Chuyến đi</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_create_tour">Tạo chuyến đi</string>
    <string name="title_search">Search...</string>
    <string name="tourName">Tour name</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="adult">Adult</string>
    <string name="children">Children</string>
    <string name="minCost">Min cost</string>
    <string name="maxCost">Max cost</string>
    <string name="chooseTourImage">Choose tour image</string>
    <string name="privateTrip">This is your private trip ?</string>
    <string name="create">Create</string>
    <string name="createTour">Create tour</string>
    <string name="api_key">AIzaSyBORpyUkCKvcY11reBSXpEbe1NdETBE-aQ</string>
    <string name="api_direct">AIzaSyBTPGt6wHibzdpuwi31X9qNwHosuyu0GEg</string>
    <string name="stopPointName"> Stop point name</string>
    <string name="serviceType">Service type</string>
    <string name="address">Address</string>
    <string name="province"> Province</string>
    <string name="arriveAt">Arrive at</string>
    <string name="leaveAt">Leave at</string>
    <string name="stopPointInfo">Stop point information</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="list">Danh sách</string>
    <string name="send">Gửi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stop_point">Thêm</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="my_tour">My tour</string>
    <string name="tour_detail">Tour detail</string>
    <string name="stop_point">Stop point</string>
    <string name="remove">Remove</string>
    <string name="edit_profile">Edit profile</string>
    <string name="switch_language">Switch language</string>
    <string name="logout">Logout</string>
    <string name="profile_setting">Chỉnh sửa thông tin</string>
    <string name="phoneNumber">Phone number</string>
    <string name="gender">Gender</string>
    <string name="DOB">Birth date</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="point">Point</string>
    <string name="rate_average">Rate average</string>
    <string name="ratings">Ratings</string>
    <string name="no_reviews">There are no reviews yet</string>
    <string name="rate_this_tour">Rate this tour</string>
    <string name="review">Review</string>
    <string name="comment">Comment</string>
    <string name="update_profile">Update profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="notification_example">Nguyễn Văn Thắng sent you an invitation for tour HCM-An Giang</string>
    <string name="confirm">Confirm</string>
    <string-array name="gender">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string-array name="VI_country_arrays">
        <item>Tiếng Việt</item>
        <item>Tiếng Anh</item>
    </string-array>
</resources>
